@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.8
 
+	- Fixed more inconsistencies between fl_draw
+	  and fl_measure (STR #1408)
 	- Fixed fl_measure which mistook a trailing '@@'
 	  for a symbol (STR #1406)
 	- Fixed GLUT behavior on window creation (STR #1403)
